--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Appliquée à php & laravel
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://quality-explained.fr/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://quality-explained.fr" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  
 
